[metadata]
name = repoqa
description = "RepoQA for Evaluating Long-Context Code Understanding"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evalplus/repoqa
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    appdirs>=1.4.4
    fire>=0.6.0
    openai>=1.23.2
    nltk>=3.8.1
    rich>=13.5.2
    vllm>=0.3.3

[options.entry_points]
console_scripts =
    repoqa.search_needle_function = repoqa.search_needle_function:main
